@startuml

title __L7's Class Diagram__\n

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    namespace gui {
      class com.company.gui.Ramka {
      }
    }
  }
  

  namespace com.company {
    namespace model {
      class com.company.model.Pojazd {
      }
    }
  }
  

  namespace com.company {
    namespace model {
      class com.company.model.Samochod {
      }
    }
  }
  

  namespace com.company {
    namespace model {
      class com.company.model.Tramwaj {
      }
    }
  }
  

  namespace com.company {
    namespace utils {
      class com.company.utils.FileUtils {
      }
    }
  }
  

  com.company.gui.Ramka -up-|> javax.swing.JFrame
  com.company.model.Pojazd .up.|> java.io.Serializable
  com.company.model.Samochod -up-|> com.company.model.Pojazd
  com.company.model.Tramwaj -up-|> com.company.model.Pojazd


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
